tests/script_errors/strnig_as_ident/error.txt
Error: 
    1 | event."@timestamp"
      |       ^ Found the token `"` but expected `<ident>`
      |         NOTE: Did you mean to quote an ident? If so use ` (a back tick) not " (a quote).